# yamnet-cry-distill-int8

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: ml-researcher.md
configs/: exp002_captures_only.yaml  exp003_audioset_only.yaml  exp004_combined.yaml  exp006_teacher_filtered.yaml  exp007_per_epoch_resample.yaml  exp008_lr_schedule.yaml
data/ids/: .gitkeep  README.md  audioset_smoke.csv  audioset_test.csv  audioset_train.csv  audioset_val.csv
docs/: architecture.md
docs/experiments/: EXP-001_smoke.md  EXP-002_captures_only.md  EXP-003_audioset_only.md  EXP-004_combined.md  EXP-005_eval_harness.md  EXP-006_teacher_filter.md  EXP-007_per_epoch_resample.md  EXP-008_lr_schedule.md  cross_eval_phase3.json  eval_audioset_holdout_exp002.json  eval_audioset_holdout_exp003.json  eval_audioset_holdout_exp004.json  eval_audioset_holdout_exp004_int8.json  eval_audioset_holdout_exp006.json  eval_audioset_holdout_exp006_int8.json  eval_audioset_holdout_exp007.json  eval_audioset_holdout_exp008.json  eval_audioset_holdout_exp008_int8.json
docs/internal/: buildout-plan-20260502.md
docs/model_cards/: yamnet-cry-distill-int8.md
docs/research/: methodology-distillation-pipeline.md  methodology-teacher-as-filter.md  student-on-captures-summary-20260503.md
scripts/: curate_audioset_ids.py  download_audioset.py  eval_captures_coverage.py  run_exp001_smoke.sh  upload_hf.py  verify_no_captures_in_artifact.py
src/quantize/: repTQ.py
tests/: test_audioset_loader.py  test_student_param_count.py  test_teacher_shapes.py
(+12 files in other folders)
